# pilot-assessment-AI-system

./: .gitattributes  .gitignore  README.md  pyproject.toml
schemas/: anchor-evaluation-report-0.1.0.schema.json  anchor-result-0.1.0.schema.json  assessment-run-0.2.0.schema.json  assessment-scheme-version-0.1.0.schema.json  backend-source-identity-0.1.0.schema.json  bn-node-concept-0.1.0.schema.json  coverage-reporting-policy-version-0.1.0.schema.json  current-model-run-preflight-report-0.1.0.schema.json  current-model-run-preflight-report-0.2.0.schema.json  current-model-run-snapshot-0.3.0.schema.json  evidence-concept-0.1.0.schema.json  evidence-recipe-0.1.0.schema.json  evidence-version-0.1.0.schema.json  ingestion-readiness-report-0.1.0.schema.json  managed-artifact-0.1.0.schema.json  model-graph-snapshot-0.1.0.schema.json  model-graph-snapshot-0.3.0.schema.json  model-node-0.1.0.schema.json  operator-definition-0.1.0.schema.json  preprocessing-provider-definition-0.1.0.schema.json  resolved-reference-set-0.1.0.schema.json  run-event-0.1.0.schema.json  run-result-envelope-0.1.0.schema.json  scheme-draft-0.1.0.schema.json  session-manifest-0.1.0.schema.json  session-semantic-snapshot-0.1.0.schema.json  source-descriptor-0.1.0.schema.json  synchronization-report-0.1.0.schema.json  (+3 more)
tests/: __init__.py  (+2 more)
tools/documentation/: build_docs.ps1  build_manuals.py  docx_builder.py  manual_common.py  mermaid-config.json  package.json  pnpm-lock.yaml  pyproject.toml  register_screenshots.py  render_diagrams.py  render_manuals.py  ui_source_identity.py  validate_manuals.py
(+795 files in other folders)
