[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "pilot-assessment-system"
version = "0.1.0"
description = "Offline, interpretable multimodal pilot assessment core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23,<5",
    "numpy>=2.3.4,<2.4",
    "pillow>=11,<13",
    "polars>=1,<2",
    "pydantic>=2.12,<3",
    "rfc8785>=0.1.4,<0.2",
    "scipy>=1.17,<1.18",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.8,<1",
    "ty>=0.0.1a1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.uv.build-backend]
module-name = "pilot_assessment"
